--- a/T3grupoJavaULP/src/t3grupojavaulp/Vistas/UniversidadVista.form
+++ b/T3grupoJavaULP/src/t3grupojavaulp/Vistas/UniversidadVista.form
@@ -103,6 +103,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Salir"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenu7ActionPerformed"/>
+          </Events>
         </Menu>
       </SubComponents>
     </Menu>
