--- a/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionAlumnosView.form
+++ b/T3grupoJavaULP/src/t3grupojavaulp/Vistas/GestionAlumnosView.form
@@ -204,6 +204,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Eliminar"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbEliminarActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.Box$Filler" name="filler1">
           <Properties>
